--- a/trading.html
+++ b/trading.html
@@ -294,7 +294,7 @@
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">And More</a>
+                                <a href="" class="text-decoration-none h6 m-0">And More...</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                         </ul>
