--- a/training.html
+++ b/training.html
@@ -94,7 +94,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            
+
                                             <a href="work-visa.html" class="dropdown-item">Work Visa</a>
                                             <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                             <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
@@ -342,106 +342,160 @@
                         </form>
                     </div>
                 </div>
-                <!-- Team Start -->
+                <!-- Courses Start -->
                 <div class="container-fluid py-5">
-                    <div class="container pt-5 pb-3">
+                    <div class="container py-5">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
-                            <h1>Training Courses</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Courses</h5>
+                            <h1>Our Popular Courses</h1>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
-                                <div class="team-item rounded overflow-hidden mb-2">
-                                    <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-1.jpg" alt="">
-                                        <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="stock-market.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
-                                    </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="rounded overflow-hidden mb-2">
+                                    <img class="img-fluid" src="img/stock-market.jpg" alt="">
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
-                                        <!-- <p class="m-0">Stock Market</p> -->
+                                        <div class="d-flex justify-content-between mb-3">
+                                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25
+                                                Students</small>
+                                            <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                                        </div>
+                                        <a class="h5" href="">Stock-Market</a>
+                                        
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
-                                <div class="team-item rounded overflow-hidden mb-2">
-                                    <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-2.jpg" alt="">
-                                        <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
-                                        </div>
-                                    </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="rounded overflow-hidden mb-2">
+                                    <img class="img-fluid" src="img/web design.jpg" alt="">
                                     <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
-                                        <!-- <p class="m-0">Software Training</p> -->
+                                        <div class="d-flex justify-content-between mb-3">
+                                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25
+                                                Students</small>
+                                            <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                                        </div>
+                                        <!-- <a class="h5" href="">Web design & development courses for beginner</a> -->
+                                        <h5>Web Design & Development Courses for Beginner</h5>
+                                        <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
+                            </div> -->
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
-                                <div class="team-item rounded overflow-hidden mb-2">
-                                    <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-3.jpg" alt="">
-                                        <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
-                                        </div>
-                                    </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="rounded overflow-hidden mb-2">
+                                    <img class="img-fluid" src="img/java.jpg" alt="">
                                     <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">France</p>
-                                    </div>
+                                        <div class="d-flex justify-content-between mb-3">
+                                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25
+                                                Students</small>
+                                            <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                                        </div>
+                                        <h5>Java Full-Stack Course in Core & Advanced Java</h5>
+                                        <!-- <a class="h5" href="">Java Full-Stack Course in Core & Advanced Java</a> -->
+                                        <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
-                                <div class="team-item rounded overflow-hidden mb-2">
-                                    <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-4.jpg" alt="">
-                                        <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-twitter"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">Ireland</p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="rounded overflow-hidden mb-2">
+                                    <img class="img-fluid" src="img/data-science.jpg" alt="">
+                                    <div class="bg-secondary p-4">
+                                        <div class="d-flex justify-content-between mb-3">
+                                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25
+                                                Students</small>
+                                            <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                                        </div>
+                                        <h5>Data Science With Python</h5>
+                                        <!-- <a class="h5" href="">Data Science With Python</a> -->
+                                        <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
                             </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="rounded overflow-hidden mb-2">
+                                    <img class="img-fluid" src="img/data-analysis.jpg" alt="">
+                                    <div class="bg-secondary p-4">
+                                        <div class="d-flex justify-content-between mb-3">
+                                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25
+                                                Students</small>
+                                            <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                                        </div>
+                                        <h5>Data Analytics With Python & Sql</h5>
+                                        <!-- <a class="h5" href="">Data Analytics With Python & Sql </a> -->
+                                        <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
+                            </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <!-- <div class="rounded overflow-hidden mb-2">
+                        <img class="img-fluid" src="img/stock-market.jpg" alt="">
+                        <div class="bg-secondary p-4">
+                            <div class="d-flex justify-content-between mb-3">
+                                <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                            </div>
+                            <h5>Stock-Market</h5>
+                            <a class="h5" href="">Stock-Market</a> -->
+                                <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
+                            </div> -->
+                            </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <!-- <div class="rounded overflow-hidden mb-2">
+                        <img class="img-fluid" src="img/tourst.jpg" alt="">
+                        <div class="bg-secondary p-4">
+                            <div class="d-flex justify-content-between mb-3">
+                                <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                            </div>
+                            <h5>Tourism Packegs</h5>
+                             <a class="h5" href="">Tourism Packegs</a> -->
+                        <!-- <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
+                            </div> -->
+                    </div>
                 </div>
-                <!-- Team End -->
             </div>
         </div>
     </div>
+    </div>
+    <!-- Courses End -->
+    </div>
+    </div>
+    </div>
     <!-- Detail End -->
-
-
 
 
     <!-- Footer Start -->
