--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <a class="h5" href="">Stock-Market</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i> <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
