--- a/study-in-cyprus.html
+++ b/study-in-cyprus.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hykin Overseas Study</title>
+    <title>Study In Cyprus</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -196,25 +196,19 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
-                                    Singapore</a>
-                                <!-- <span class="badge badge-primary badge-pill">150</span> -->
+                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0">Study In Singapore</a>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
-                                <!-- <span class="badge badge-primary badge-pill">131</span> -->
-                            </li>
+                            </li>                            
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
-                                <!-- <span class="badge badge-primary badge-pill">78</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
-                                <!-- <span class="badge badge-primary badge-pill">56</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
-                                <!-- <span class="badge badge-primary badge-pill">98</span> -->
                             </li>
                         </ul>
                     </div>
@@ -288,10 +282,10 @@
                 <!--Why Study Start-->
                 <div class="col-lg-12">
                     <div class="mb-4">
-                        <div class=" mb-5">
+                        <div class="mb-5">
                             <h2 class="mb-4">Studying in Cyprus can offer several benefits</h2>
-                            <!-- <img class="img-fluid rounded w-20 float-left mr-4 mb-3" style="width: 40%; height: 500px;"
-                                src="img/Singapore-culture.jpg" alt="Image"> -->
+                             <img class="img-fluid rounded w-20 float-left mr-4 mb-3" style="width: 40%; height: 500px;"
+                                src="img/cyprus/cyprus-study-1.jpg" alt="Image">
                             <ul>
                                 <h4 class="mb-2">1. High-Quality Education</h4>
                                 <li style="list-style-type: none;">Cyprus has a growing reputation for providing quality education. Many universities
@@ -330,7 +324,7 @@
                     <div class="col-lg-12">
                         <div class="mb-4">
                             <div class=" text-align: justify mt-5">
-                                <h4 class="mb-3">Singapore student pass application</h4>
+                                <h2 class="mb-5 text-center">Cyprus Visa process</h2>
                                 <img class="img-fluid float-right rounded w-20 mr-4 mb-3"
                                     style="width: 40%; height: 500px;" src="img/singapore/singapore-visa.jpg"
                                     alt="Image">
