--- a/study.html
+++ b/study.html
@@ -346,8 +346,8 @@
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
-                            <h1>Meet Our clients</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Study Abroad</h5>
+                            <h1>Choose Your Study destination</h1>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
@@ -364,7 +364,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Singapore</h5>
+                                        <h5>Study in Singapore</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -383,7 +383,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Cyprus</h5>
+                                        <h5>Study in Cyprus</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -402,7 +402,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>France</h5>
+                                        <h5>Study in France</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -421,7 +421,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Ireland</h5>
+                                        <h5>Study in Ireland</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
