--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hykin Overseas Study</title>
+    <title>Study in Singapore</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -512,29 +512,6 @@
 
                                                     </div>
                                                 </div>
-                                                <!-- <div class="col-md-4 mb-3">
-                                                    <div class="card">
-                                                        <img class="img-fluid" alt="100%x280"
-                                                            src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=8ac55cf3a68785643998730839663129">
-                                                        <div class="card-body">
-                                                            <h4 class="card-title">Special title treatment</h4>
-                                                            <p class="card-text">With supporting text below as a natural
-                                                                lead-in to additional content.</p>
-
-                                                        </div>
-                                                    </div>
-                                                </div> -->
-                                                <!-- <div class="col-md-4 mb-3">
-                                                    <div class="card">
-                                                        <img class="img-fluid" alt="100%x280"
-                                                            src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=5ee4fd5d19b40f93eadb21871757eda6">
-                                                        <div class="card-body">
-                                                            <h4 class="card-title">Special title treatment</h4>
-                                                            <p class="card-text">With supporting text below as a natural
-                                                                lead-in to additional content.</p>
-                                                        </div>
-                                                    </div>
-                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
